# burrow

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  burrow.cabal  cabal.project  cabal.project.freeze-nix  cabal.project.freeze-normal  default.nix  flake.nix  new-special.menu  old-special.menu  package.sh  package.yaml  prep-release.sh  release.nix  shell.nix  stack.yaml  update-changelog.sh
.github/workflows/: release.yml
app/: Main.hs
burrowsrc/: .gophermap  example-phlog-post.menu.txt  example-text-file.txt  favorite-gopherholes.menu.md  index-not-markdown.md  index.menu.md  irc-connection-info.txt  test.menu.md
burrowsrc/jgs-archive/: index.markdown
burrowsrc/jgs-archive/animals/: aquatic-creatures.txt  birds.txt  farm-animals.txt  insects-arachnids-anad-other-arthropods.txt  north-american-wildlife.txt  pets-page-1.txt  pets-page-2.txt  reptiles-and-amphibians.txt  teddy-bears-stuffed-animals.txt  zoo-animals.txt
burrowsrc/jgs-archive/cartoon-characters/: comic-strip-characters.txt  disney-characters.txt  disney-toy-story-characters.txt  disney-winnie-the-pooh-characters.txt  other-characters.txt  peanuts-characters.txt  sesame-street-characters.txt  warner-brothers-universal-characters.txt
burrowsrc/jgs-archive/other-categories/: ascii-art-in-stories-thoughts-jokes.txt  buildings.txt  celestial-items.txt  clothing-and-personal-articles.txt  computer-oriented-items.txt  electronic-devices-and-appliances.txt  email-stamps.txt  favorites-p1.txt  favorites-p2.txt  flags.txt  flowers-and-plants.txt  fonts.txt  food-and-drink.txt  logos-and-symbols.txt  musical-items.txt  nature-and-outdoor-scenery.txt  odds-n-ends.txt  school-and-educational-items.txt  scrolling-ascii-art.txt  shapes-and-abstract-designs.txt  sig-files-p1.txt  sig-files-p2.txt  small-ascii-pictures-maximum-of-5-lines.txt  solid-line-conversions.txt  sports-items.txt  swimming-ascii-art.txt  transportation.txt
burrowsrc/jgs-archive/other-categories/celestial-items/: 1993-03-sun.txt  1996-09-small-sun.txt  1996-09-the-man-in-the-moon.txt  1996-09-the-moon.txt  1996-09-the-smiling-sun.txt  1996-09-the-sun.txt  1996-11-phases-of-the-moon.txt  1996-11-signs-of-the-zodiac.txt  1996-12-sunrise-sunset.txt  1997-01-beach-scenes.txt  1997-01-stars.txt  1997-03-a-peek-into-the-night-sky.txt  1997-03-five-pointed-stars.txt  1997-03-woman-in-the-moon.txt  1997-05-sun.txt  1997-07-earth.txt  1997-07-man-in-the-moon.txt  1997-07-scaffolding-to-the-moon.txt  1997-07-sun.txt  1997-07-touchmoon.txt  1997-08-big-and-little-dipper.txt  1997-10-man-in-the-moon.txt  1997-10-man-in-the-moons.txt  1997-10-moon-and-starts.txt  1998-02-saturn.txt  1998-08-saturn.txt  1998-12-crescent-moons.txt  1999-07-comet-and-earth-sun.txt  2000-09-earth.txt  2000-09-star-design.txt  2000-09-star.txt  six-pointed-star.txt
burrowsrc/jgs-archive/people-creatures/: children-and-babies.txt  couples.txt  men.txt  miscellaneous-characters.txt  mythical-medieval.txt  mythical-medieval2.txt  mythos-p2.txt  mythos.txt  religious-items-symbols-and-people.txt  the-human-body.txt  women.txt
burrowsrc/jgs-archive/seasonal-items/: 13-days-of-halloween.txt  birthday-celebration.txt  christmas-stories.txt  christmas-winter.txt  easter-and-spring.txt  halloween-and-scary-stuff.txt  independence-day-july-4th.txt  new-baby.txt  new-years-celebration.txt  st-patricks-day-and-irish-art.txt  thanksgiving-and-fall.txt  valentines-day-and-love.txt  wedding-and-thank-you.txt
burrowsrc/jgs-archive/seasonal-items/advent-calendar/: december-10th.txt  december-11th.txt  december-12th.txt  december-13th.txt  december-14th.txt  december-15th.txt  december-16th.txt  december-17th.txt  december-18th.txt  december-19th.txt  december-1st.txt  december-20th.txt  december-21st.txt  december-22nd.txt  december-23rd.txt  december-24th.txt  december-25th.txt  december-2nd.txt  december-3rd.txt  december-4th.txt  december-5th.txt  december-6th.txt  december-7th.txt  december-8th.txt  december-9th.txt
burrowsrc/jgs-archive/the-new-unsorted-ascii-art/: apr-97.txt  apr-98.txt  apr-99.txt  apr-aug-00.txt  apr-june-01-ascii-art-by-jgs.txt  aug-98.txt  dec-97.txt  dec-98.txt  feb-98.txt  feb-99.txt  jan-98.txt  jan-99.txt  jan-mar-01-ascii-art-by-jgs.txt  jul-97.txt  july-98.txt  july-aug-99.txt  jun-97-page-1.txt  jun-97-page-2.txt  jun-98.txt  june-99.txt  mar-97.txt  mar-98.txt  mar-99.txt  may-97-page-1.txt  may-97-page-2.txt  may-98.txt  may-99.txt  nov-97.txt  nov-98.txt  nov-dec-00-ascii-art-by-jgs.txt  oct-97.txt  oct-98-sept-98.txt  sep-99-march-00.txt  sept-97-aug-97.txt  sept-oct-00.txt
burrowsrc/phlog/: test-post.md  using-gnu-screen.md
data/: burrow.toml  gopherhole.ini  spacecookie.json
data/artboxes/: basic.abx
data/fonts/: basicthorpe.bmf  doublestruck.bmf  figlet_graceful.bmf  figlet_js_capital_curves.bmf  figletitalic.bmf  js_stick_letters copy.bmf  simple_octo.bmf  simple_underline.bmf  simplest.bmf
docker/: .env  .gitignore  Dockerfile  Makefile  README.md  auto_update.sh  burrow.toml  install-latest-deb.sh  latest-deb.sh  launch.sh  post-receive  spacecookie.json
example-gopherhole/: example-phlog-post.menu.txt
reposcripts/: README.md  package.sh  prep-release.sh  update-changelog.sh
src/: Build.hs  Common.hs  Config.hs  FrontMatter.hs  Markdown.hs  Mustache.hs  Phlog.hs  Tagging.hs  TextUtils.hs  Types.hs
src/Markdown/: Common.hs  ToGopherMenu.hs  ToGopherMenu2.hs  ToTextFile.hs
src/SpacecookieClone/: Config.hs  FileType.hs  Serve.hs  Systemd.hs
src/TextUtils/: Containers.hs  Headings.hs
templates/: footer.md.mustache  footer.txt  header.md.mustache  header.txt  helloWorld.txt  menu.menu.md.mustache  menu.txt  meta.txt  post.txt  test.md.mustache
test/: DocTests.hs
test-gopherhole/: index.menu.md.mustache  special.menu.partial.md.mustache  special.menu.partial.menu.md.mustache  test.menu.txt
test-gopherhole/foo/: testfile.text.md.mustache  testfile.txt.mustache
